<resources>
    <string name="app_name">DemoProject</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="verify">Verify</string>
    <string name="welcome_to_the_warmodroid_tutorial">Welcome to the Warmodroid Tutorial</string>
    <string name="welcome_to_the_Mapview" />
    <string name="send_otp">Send OTP</string>
    <string name="didn_t_get_opt_resend">Did\'t get OPT? <b>Resend</b></string>
    <string name="please_enter_the_verification_code_to_91_xxxxxxxxxx">Please enter the verification code to +91-XXXXXXXXXX</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_enter_your_phone_number_to_continue">Please enter your phone Number to continue</string>
    <string name="phone_number">Phone Number</string>
    <string name="_91">+91-</string>
    <string name="get_otp">Get OTP</string>
    <string name="submit">Submit</string>
    <string name="mark_the_place">Mark the place</string>
    <string name="show_marked_places">Show marked places</string>
    <string name="title_activity_maps">Map</string>
    <string name="list_of_marked_places">LIST OF MARKED PLACES:</string>
    <string name="enter_the_description_here">Enter the Description here..</string>
    <string name="enter_the_name_here">Enter the Name here..</string>
    <string name="save">SAVE</string>
    <string name="view">VIEW</string>
    <string name="delete">Delete</string>
    <string name="home">Home</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="login">Login</string>
    <string name="title_activity_maps2">Map</string>
    <string name="name">Name :</string>
    <string name="kkah">kkah</string>
    <string name="discription">Discription :</string>
</resources>