<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NameDescriptionActivity">

    <LinearLayout
        android:id="@+id/dummy2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/enter_the_name_here"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:id="@+id/editTextDescription1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/enter_the_description_here"
            android:layout_marginTop="50dp"
            />
        <Button
            android:id="@+id/saveTheTextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/save"/>

    </LinearLayout>
</LinearLayout>